src/objects/XeroContact__c.object
<CustomObject>
    <fields>
        <fullName>BillingCondition__c</fullName>
        <label>Billing Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XeroId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Xero Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XeroSettings__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Xero Contacts</relationshipLabel>
        <relationshipName>XeroContacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Xero Contact</label>
    <nameField>
        <displayFormat>XC-{0000}</displayFormat>
        <label>Xero Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>